--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,8 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "core-js": "^2.6.11",
+    "paper": "^0.12.4",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
